adds database info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=dailypuzzle
+
+#db connection
+spring.datasource.url=jdbc:mysql://localhost:3306/dailypuzzle
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+
